afisare carti editate de o editura selectata

--- a/Pages/Publishers/Index.cshtml
+++ b/Pages/Publishers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model Dumitru_Delia_Lab2.Pages.Publishers.IndexModel
 
 @{
@@ -40,3 +40,32 @@
     }
     </tbody>
 </table>
+@if (Model.PublisherData.Books != null)
+{
+    <h3>Books Edited by Selected Publisher</h3>
+    <table class="table">
+
+        @foreach (var item in Model.PublisherData.Publishers)
+        {
+            string selectedRow = "";
+            if (item.ID == Model.PublisherID)
+            {
+                selectedRow = "table-success";
+            }
+            <tr class="@selectedRow">
+
+                <td>
+                    @{
+                        foreach (var b in item.Books)
+                        {
+
+                            @b.Title @: @b.Author.FullName
+
+                            <br />
+                        }
+                    }
+                </td>
+            </tr>
+        }
+    </table>
+}
