--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -30,7 +30,7 @@
             </th>
             <th>
                 <a asp-page="./Index" asp-route-sortOrder="@Model.AuthorSort">
-                @Html.DisplayNameFor(model => model.Book[0].Author.FirstName)
+                @Html.DisplayNameFor(model => model.Book[0].Author)
                 </a>
             </th>
 
